<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- Project from https://start.vaadin.com/454493bd-4c1f-414d-bed8-1c1d7a48f4be -->
    <groupId>com.example</groupId>
    <artifactId>skeleton-starter-vaadin-swing-bridge</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <vaadin.version>25.1.0</vaadin.version>
        <swing-bridge.version>1.1.0</swing-bridge.version>
        <swing-bridge.path>${settings.localRepository}/com/vaadin</swing-bridge.path>
    </properties>
    
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.4</version>
        <relativePath/>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <dependencies>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>swing-bridge-patch</artifactId>
            <version>${swing-bridge.version}</version>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>swing-bridge-graphics</artifactId>
            <version>${swing-bridge.version}</version>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>swing-bridge-flow</artifactId>
            <version>${swing-bridge.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-slf4j2-impl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.vaadin</groupId>
            <!-- Replace artifactId with vaadin-core to use only free components -->
            <artifactId>vaadin</artifactId>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>com.vaadin</groupId>
            <artifactId>vaadin-dev</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>spring-boot:run</defaultGoal>
        <plugins>
            <plugin>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-maven-plugin</artifactId>
                <version>${vaadin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-frontend</goal>
                            <goal>build-frontend</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- all JVM flags as one space-separated string -->
                    <jvmArguments>
                        --patch-module java.desktop=${swing-bridge.path}/swing-bridge-patch/${swing-bridge.version}/swing-bridge-patch-${swing-bridge.version}.jar
                        -Xbootclasspath/a:${swing-bridge.path}/swing-bridge-graphics/${swing-bridge.version}/swing-bridge-graphics-${swing-bridge.version}.jar
                        --add-reads=java.desktop=ALL-UNNAMED
                        --add-exports=java.desktop/sun.font=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt.dnd.peer=ALL-UNNAMED
                        --add-exports=java.base/sun.nio.cs=ALL-UNNAMED
                        --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
                        --add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
                        --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
                        --add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED
                        --add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
                        --add-exports=java.desktop/sun.print=ALL-UNNAMED
                        --add-exports=java.desktop/sun.swing=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt.dnd=ALL-UNNAMED
                        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
                    </jvmArguments>

                    <!-- JVM -D system properties -->
                    <systemPropertyVariables>
                        <java.awt.headless>false</java.awt.headless>
                        <!--<applibs.dir>${project.basedir}/some-lib-dir</applibs.dir>-->
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
